@@ -1,3 +1,8 @@
+2003-09-22  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* gsearchtool.[ch]:  Fix for bug report 122704.
+	(http://bugzilla.gnome.org/show_bug.cgi?id=122704)
+	
 2003-09-21  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* gnome-search-tool-animation.png:  Small touch up.
